# lum-pe

./: .gitignore  CHANGELOG.md  CITATION.cff  CONTRIBUTING.md  LICENSE  README.md  SECURITY.md  SUBIR_A_GITHUB.bat  pyproject.toml
dataset/dataset_public_v0.1.0/: DATA_DICTIONARY.md  MANIFEST_SHA256.txt  README_PUBLIC.md  calibration_manifest.json  evidence_set_table_public_45.csv  generate_public_dataset.py  thresholds.json  z_scales.json
dataset/dataset_public_v0.1.0/bundles_public/: public_field_01_soc_iv_bundle.json  public_field_02_soc_iv_bundle.json  public_field_03_form_general_bundle.json  public_field_04_nat_general_bundle.json  public_field_05_eng_test_bundle.json  public_field_06_form_general_bundle.json  public_field_07_soc_did_bundle.json  public_field_08_eng_test_bundle.json  public_field_09_soc_did_bundle.json  public_field_10_form_general_bundle.json  public_field_11_soc_did_bundle.json  public_field_12_soc_iv_bundle.json  public_field_13_soc_iv_bundle.json  public_field_14_soc_did_bundle.json  public_field_15_nat_general_bundle.json  public_field_16_form_general_bundle.json  public_field_17_soc_iv_bundle.json  public_field_18_nat_general_bundle.json  public_field_19_form_general_bundle.json  public_field_20_form_general_bundle.json  public_field_21_soc_iv_bundle.json  public_field_22_form_general_bundle.json  public_field_23_nat_general_bundle.json  public_field_24_form_general_bundle.json  public_field_25_soc_iv_bundle.json  public_field_26_soc_did_bundle.json  public_field_27_soc_iv_bundle.json  public_field_28_eng_test_bundle.json  public_field_29_nat_general_bundle.json  public_field_30_nat_general_bundle.json  public_field_31_form_general_bundle.json  (+14 more)
lum_pe_product/: DEV_NOTES.md  README.md  pyproject.toml
lum_pe_product/examples/: container_nat_general.json  payload_nat_general.json
lum_pe_product/lum_pe/: __init__.py  cli.py
lum_pe_product/lum_pe/engine/: core.py
lum_pe_product/lum_pe/indices/: types.py
lum_pe_product/lum_pe/packs/: __init__.py  impl.py  registry.py
lum_pe_product/lum_pe/spec/: contract.py
lum_pe_product/lum_pe/util/: hashing.py
lum_pe_product/tests/: test_smoke.py
spec/: CONTRACT.md  lum_contract_schema.json
spec/examples/: invalid.json  valid.json
validation/: LUM_Validation_SocialPriming.docx  bundle_priming_W1_2005-2010.json  bundle_priming_W2_2011-2015.json  bundle_priming_W3_2016-2020.json
