[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "lum-pe"
version = "0.1.0"
description = "LUM-PE vΩ.2026-02 — Universal resolution engine for closure (CLARION) or non-closure plan (PSNC)."
readme = "README.md"
requires-python = ">=3.10"
license = {text = "MIT"}
authors = [
  {name = "Julio David Rojas Aguayo", email = "jules_pintor@outlook.com"}
]
keywords = [
  "luminomatics", "scientific closure", "evidence evaluation",
  "CLARION", "PSNC", "causal inference", "decision framework",
  "reproducibility"
]
classifiers = [
  "Development Status :: 4 - Beta",
  "Intended Audience :: Science/Research",
  "License :: OSI Approved :: MIT License",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Topic :: Scientific/Engineering",
  "Topic :: Scientific/Engineering :: Artificial Intelligence",
]
dependencies = []

[project.optional-dependencies]
dev = [
  "pytest>=7.0",
  "pytest-cov",
  "ruff",
  "mypy",
]

[project.scripts]
lum = "lum_pe.cli:main"

[project.urls]
Homepage = "https://github.com/julespintor-tech/lum-pe"
Documentation = "https://github.com/julespintor-tech/lum-pe#readme"
Repository = "https://github.com/julespintor-tech/lum-pe"
Issues = "https://github.com/julespintor-tech/lum-pe/issues"
Changelog = "https://github.com/julespintor-tech/lum-pe/blob/main/CHANGELOG.md"

[tool.setuptools]
packages = [
  "lum_pe",
  "lum_pe.engine",
  "lum_pe.packs",
  "lum_pe.indices",
  "lum_pe.spec",
  "lum_pe.util"
]

[tool.pytest.ini_options]
testpaths = ["tests"]

[tool.ruff]
line-length = 100
